fix break in 992px - 998px

--- a/pycon_portugal_2022/static/sass/_home.scss
+++ b/pycon_portugal_2022/static/sass/_home.scss
@@ -14,7 +14,6 @@
       display: block;
       align-content: center;
       max-width: 24rem;
-      margin-right: 2%;
 
       .home-title-block {
         position: relative;
